### Version 1.0.0
- AddressDefinitions (Removed)
- AddressType (Changed)
    - Inlined definitions for all properties
    - Adjusted ZIP code regex to allow portugese zip codes

### Version 0.6.0
- AdditionalOptionsType (Changed)
    - removed property "optionDescription"
    - property "optionValue" is now optional
- TimestampType (Changed)
    - Enhanced description: Timestamp must always include the timezone

### Version 0.5.1
- Adjusted some descriptions and examples
- BrokerContactType (Changed)
    - renamed property "contactName" to "contactFirstName"
    - added mandatory property "contactSurname"
- ContactType (Changed)
    - renamed property "contactName" to "contactFirstName"
    - added mandatory property "contactSurname"

### Version 0.5.5
- AddressDefinitions (Changed)
    - renamed definition "adressExtensionDef" to "addressExtensionDef"
- AddressType (Changed)
    - renamed property "adressExtension" to "addressExtension"
- BrokerType (Changed)
    - removed attribute "brokerContact" (moved to OfferNlpiRequestDataType)
- CompanyCustomerType (Changed)
    - removed "riskCharacteristic"
- CompanyLegalStatusType (Changed)
    - Capitalized enum values
- GenderType
    - removed values "other" and "unknown"
    - capitalized enum values
- HeaderType (Changed)
    - removed property "standard"
- InsurerCodeType (Changed)
    - adjusted the pattern regex to limit allowed values
- InsurerType (Changed)
    - removed property "insurerContact"
- RegFINMANoType (Changed)
    - Changed format to support the new finma number format and disallow the old format


### Version 0.4.0 (05.11.2024)
General improvements and necessary changes for Offer NLPI v0.4.0

- AdditionalOptionsType (Changed)
    - Inlined definition for array items
- AdditionalOptionType (Removed)
- AddressType (Renamed)
    - Renamed to AddressDefinitions
- AgencyType (Removed)
- BenefitPeriodType (Removed)
    - Moved type to Offer NLPI standard
- BrokerContactType (Added)