@@ -1,0 +1,6 @@
+{
+  "$schema": "https://json-schema.org/draft/2019-09/schema",
+  "description": "Format for percentages. Examples: 5% is formatted as 5 or 5.0; 0.5% is formatted as 0.5; 0.5‰ is formatted as 0.05.",
+  "type": "number",
+  "multipleOf": 0.0001
+}
